2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5x.tcl: Updated version number to sync with 1.6.1
	* md5.man: release.
	* pkgIndex.tcl:

2004-02-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5x.tcl: Added -- to end options if using Trf's hex in case the
	  hash begins with a - character (possible).  Streamlined the <<<
	  proc.

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5x.test: Heh. What a surprise. The testsuite uses a command to
	  generate the proper error message based on the version of Tcl,
	  and what does md5 v2 ? It generates its own messages, and they
	  are always in 8.4+ format. Hnn. Fixed the testsuite.

2003-07-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5.man: Updated the manual page for md5 2.0

2003-07-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5c.tcl:  Brought in the critcl implementation of MD5
	* md5.c:     originally by Jean-Claude Wippler <jcw@equi4.com>
	* md5.h:     with code from RFC 1321.
	
	* md5x.tcl:  Version 2 md5 module. This is based upon the MD4 module 
	* md5x.test: code and permits incremental updates into the hash.
	             This version will use the critcl code if available.

	=== VERSION INCOMPATABILITY ===
	
	md5 1 returns data as a hex representation.
	md5 2 returns the data as a binary representation. If you want the
	      hex rep, provide the -hex option to the md5 command.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* md5.tcl:
	* md5.man:
	* pkgIndex.tcl: Set version of the package to to 1.4.3.

2003-02-05  David N. Welton  <davidw@dedasys.com>

	* md5.tcl (::md5::time): Used lindex instead of regexp to fish the